# recognizing_handwritten_digits

./: .gitignore  README.md  matrix.cpp  matrix.h  mnist_loader_base.cpp  network.cpp  recognizing_handwritten_digits  t1.ncu-rep
.devcontainer/: devcontainer.json
c++/: build_all.sh
c++/Bahdanau/: permute_test.py  readme.md
c++/bmm_bench/: bench.py  main.cpp  makefile  readme.md
c++/cblas_bench/: main.cpp  makefile  readme.md
c++/curand/: main.cpp  makefile
c++/deep_gru/: main.cpp  makefile  readme.md  rnnlm.cpp  rnnlm.h
c++/equations/: readme.md
c++/fra_vocab_builder/: fra_vocab_builder.py  vocab_en.txt  vocab_en_tiny.txt  vocab_fr.txt  vocab_fr_tiny.txt
c++/gru/: main.cpp  readme.md  rnnlm.cpp  rnnlm.h
c++/gru_embedding/: dataloader.h  main.cpp  makefile  readme.md  rnnlm.cpp  rnnlm.h
c++/lstm/: main.cpp  makefile  readme.md  test.py
c++/lstm_v1/: main.cpp  makefile  readme.md  rnnlm.cpp  rnnlm.h
c++/matrix_bench/: main.cpp  makefile  readme.md
c++/rnn/: dataloader.h  main.cpp  makefile  readme.md  rnnlm.cpp  rnnlm.h  test.py  testcrossentropy.cpp  testgrad.cpp
c++/rnn/autograd/: node.cpp  node.h
c++/rnn/checkpoints/: .gitignore
c++/rnn_v1/: main.cpp  makefile  readme.md  rnnlm.cpp  rnnlm.h
c++/seq2seq/: checkpoint.cpp  checkpoint.h  dataloader.cpp  dataloader.h  main.cpp  makefile  readme.md  seq2seq  seq2seq.cpp  seq2seq.h  test.txt
c++/transformer/: addnorm.cpp  addnorm.h  addnormtest.py  attention.cpp  attention.h  attentiontest.py  c,log  checkpoint.cpp  checkpoint.h  decoder.cpp  decoder.h  dropout.cpp  dropout.h  embedding.cpp  embedding.h  encoder.cpp  encoder.h  ffn.cpp  ffn.h  ffntest.py  layernorm.cpp  layernorm.h  layernormtest.py  linear.cpp  linear.h  liner.cpp  liner.h  macro.h  main.cpp  makefile  mhatest.py  optimizers.cpp  optimizers.h  posencoding.cpp  posencoding.h  readme.md  seq2seq.cpp  seq2seq.h  sighandler.cpp  softmaxtest.py  (+5 more)
c++/transformer/py/: attentiontest.py  decodertest.py  encodertest.py  lazylineartest.py  maskedattentiontest.py  mhatest.py  posencodingtest.py
c++/utils/autograd/: dataloader.h  node.cpp  node.h  optimizers.cpp  optimizers.h  parameters.cpp  parameters.h
c++/utils/dataloader/: mnist_loader_base.cpp  mnist_loader_base.h
c++/utils/layers/: layers.cpp  layers.h  rnnlm.cpp  rnnlm.h
c++/utils/lmcommon/: common.cpp  common.h  dataloader.h
c++/utils/matrix/: matrix.cpp  matrix.h
c++/utils/optimizers/: optimizers.cpp  optimizers.h
c++/utils/parameters/: parameters.cpp  parameters.h
c++/utils/stats/: stats.cpp  stats.h
c++/v0/: .gitignore  main.cpp  makefile  network.cpp  network.h
c++/v1/: main.cpp  makefile  readme.md  test.py  testmodule.cpp
c++/v1_sigmoid_mse/: .gitignore  main.cpp  makefile  mlp.cpp  mlp.h  variable.cpp  variable.h
c++/v2/: layers.cpp  layers.h  main.cpp  makefile  mlp.cpp  mlp.h  models.cpp  models.h  optimizers.h  readme.md  testgrad.cpp
c++/v3/: autogradtest  main.cpp  makefile  mlp.cpp  mlp.h  readme.md
c++/v4_cuda/: main.cu  makefile  mlp.cu  mlp.cuh  readme.md
c++/v4_cuda/autograd/: node.cu  node.cuh  optimizers.cu  optimizers.cuh  parameters.cu  parameters.cuh
c++/v4_cuda/backends/: ops.cu  ops.cuh
c++/v4_cuda/cuda_util/: cuda_ops.cu  cuda_ops.cuh
c++/v4_cuda/matrix/: matrix.cpp  matrix.cu  matrix.cuh  matrix.h
c++/v5_tensor/: checkpoint.cpp  checkpoint.h  common.cpp  common.h  dataloader.cpp  dataloader.h  main.cpp  main.cu  makefile  perf.sh  readme.md  sighandler.cpp  test.cpp  test.cu  test.txt  transformer.cpp
c++/v5_tensor/autograd/: node.h
c++/v5_tensor/backend/: backend_ops.h
c++/v5_tensor/backends/: backend_ops.h
c++/v5_tensor/graph/: actions.cpp  actions.h  node.cpp  node.h
c++/v5_tensor/model/: mlp.cpp  mlp.h
c++/vocab_builder/: main.cpp  makefile  vocab.txt
chain-rule/: main.py
cuda/playground/: CMakeLists.txt  readme.md
cuda/playground/matrixmul/: CMakeLists.txt  baseline.cu  mnp.cu  opt1.cu  opt2.cu  opt3.cu  run_perf.sh
cuda/reduce/: CMakeLists.txt  readme.md
cuda/reduce/1/: CMakeLists.txt  baseline.cu  main.cu  main1.cu  opt1.cu  opt2.cu  opt3.cu  opt4.cu  opt5.cu  opt6.cu  opt7.cu  run_perf.sh  test.cu
dataloader/: mnist_loader_base.cpp  mnist_loader_base.h
pytorch/: load_model_demo.py  main.py  mnist_loader.py  mnist_with_adam_crossentropy.py  mnist_with_sgd_mse.py
pytorch/bptest/: test.py
resources/: .gitignore  fra_stiny.txt  fra_tiny.txt  preprocess.py  preprocess_fra.py  timemachine_middle.txt  timemachine_preprocessed.txt  timemachine_small.txt  timemachine_tiny.txt
rl/: readme.md  test.py
v0/: main.cpp  makefile
v1/: main.cpp  makefile  mlp.cpp  mlp.h  readme.md  test.py  testcrossentropy.cpp  testgrad.cpp  variable.cpp  variable.h
(+77 files in other folders)
